# freeswitch-sofia-trace-parser

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md
hooks/: install.sh  pre-commit
src/: frame.rs  grep.rs  lib.rs  message.rs  sip.rs  types.rs
tests/: level1_samples.rs  level2_samples.rs  level3_samples.rs
